--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <span class="text-3xl mx-4 text-rose-800">&#10084;</span>
                 <div class="border-t-2 border-rose-800 w-32 mx-auto my-6"></div>
             </div>
-            <p class="text-rose-800 mb-8 text-lg text-center lg:max-w-[600px]">Tanpa Mengurangi Rasa Hormat, Kami
+            <p class="text-rose-800 mx-3 md:mx-auto mb-8 text-l md:text-lg text-center lg:max-w-[600px]">Tanpa Mengurangi Rasa Hormat, Kami
                 Bermaksud Mengundang Saudara/Saudari Untuk Menghadiri Acara Pernikahan Kami</p>
             <button id="openBtn"
                 class="border border-rose-800 text-rose-800 hover:bg-rose-800 hover:text-white font-semibold py-3 px-8 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ">
