--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <span id="rekening">3220922412</span>
             </button><br>
             <span class="opacity-50">*Klik tombol di atas untuk menyalin nomor rekening</span>
-            <div class="border-t-2 border-rose-800 w-[800px] mx-auto my-6"></div>
+            <div class="border-t-2 border-rose-800 w-[100px] md:w-[800px] mx-auto my-6"></div>
             <h3 class="font-montserrat font-bold text-[30px] mt-6">TERIMA KASIH</h3>
             <p class="text-l px-10">
                 Merupakan suatu kehormatan dan kebahagiaan bagi kami sekeluarga apabila Bapak/Ibu/Saudara/i berkenan
