--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Undangan Pernikahan</title>
+    <script>
+        tailwind.config = {
+            darkMode: 'class'
+        }
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;600&display=swap"
         rel="stylesheet">
@@ -57,7 +62,8 @@
                 <span class="text-3xl mx-4 text-rose-800">&#10084;</span>
                 <div class="border-t-2 border-rose-800 w-32 mx-auto my-6"></div>
             </div>
-            <p class="text-rose-800 mx-3 md:mx-auto mb-8 text-l md:text-lg text-center lg:max-w-[600px]">Tanpa Mengurangi Rasa Hormat, Kami
+            <p class="text-rose-800 mx-3 md:mx-auto mb-8 text-l md:text-lg text-center lg:max-w-[600px]">Tanpa
+                Mengurangi Rasa Hormat, Kami
                 Bermaksud Mengundang Saudara/Saudari Untuk Menghadiri Acara Pernikahan Kami</p>
             <button id="openBtn"
                 class="border border-rose-800 text-rose-800 hover:bg-rose-800 hover:text-white font-semibold py-3 px-8 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ">
@@ -82,7 +88,7 @@
             <div class="grid grid-rows-2 max-w-[900px] mx-auto" id="identity-1">
                 <div class="grid grid-cols-1 md:grid-cols-2 items-center justify-center mb-10 gap-2">
                     <div class="text-center flex flex-col items-center order-2 md:order-1">
-                        <h4 class="font-great-vibes font-semibold text-[60px] text-rose-700 mb-2">Faisal</h4>
+                        <h4 class="font-montserrat font-semibold text-[60px] text-rose-700 mb-2">Faisal</h4>
                         <p class="font-regular text-xl text-rose-700">Faisal Fatchu Roji</p>
                         <p class="font-regular text-lg text-rose-700">Anak ke 3 dari Bapak Jono & Ibu Fatimah</p>
                         <p class="font-regular text-lg text-gray-800">Dsn Judel, Kel. Klemunan, Rt 2 Rw 1, Kec.
@@ -98,7 +104,7 @@
                             class="w-[300px] rounded-lg mx-auto md:mr-5 order-1 md:order-2">
                     </div>
                     <div class="text-center flex flex-col items-center order-2 md:order-1">
-                        <h4 class="font-great-vibes font-semibold text-[60px] text-rose-700 mb-2">Hanny</h4>
+                        <h4 class="font-montserrat font-semibold text-[60px] text-rose-700 mb-2">Hanny</h4>
                         <p class="font-regular text-xl text-rose-700">Hanny Widhianingrum</p>
                         <p class="font-regular text-lg text-rose-700">Anak ke 1 dari Bapak Suliono & Ibu rani
                             Sulastri</p>
@@ -140,14 +146,14 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 max-w-[700px] mx-auto gap-6">
                     <div class="text-center">
                         <h3 class="font-semibold text-lg text-rose-800 mb-2">Akad Nikah</h3>
-                        <p class="text-gray-700">Senin, 6 Oktober 2025</p>
-                        <p class="text-gray-700">09.00 WIB</p>
+                        <p class="text-gray-700">Minggu, 5 Oktober 2025</p>
+                        <p class="text-gray-700">18.30 WIB</p>
                         <p class="text-gray-600">Rumah Mempelai Wanita</p>
                     </div>
                     <div class="text-center">
                         <h3 class="font-semibold text-lg text-rose-800 mb-2">Resepsi Pernikahan</h3>
                         <p class="text-gray-700">Senin, 6 Oktober 2025</p>
-                        <p class="text-gray-700">16.00 - Selesai WIB</p>
+                        <p class="text-gray-700">13.00 - Selesai WIB</p>
                         <p class="text-gray-600">Rumah Mempelai Wanita</p>
                     </div>
                     <a href="https://maps.app.goo.gl/wYjMqvwwx7PL9BPh6?g_st=awb" target="_blank"
@@ -181,7 +187,7 @@
             <button id="copyBtn"
                 class="block mx-auto mt-8 border border-rose-800 text-rose-800 hover:bg-rose-800 hover:text-white font-semibold py-3 px-8 rounded-xl shadow-lg transform hover:scale-105 transition duration-300">
                 <i class="fa-solid fa-gift"></i><br>
-                BRI<br>
+                BCA<br>
                 <span id="rekening">3220922412</span>
             </button><br>
             <span class="opacity-50">*Klik tombol di atas untuk menyalin nomor rekening</span>
@@ -206,6 +212,9 @@
                 </div>
             </div>
         </div>
+        <audio id="bg-music" autoplay loop>
+            <source src="components/song.mp3" type="audio/mpeg">
+        </audio>
     </div>
 
     <script>
@@ -213,25 +222,25 @@
             const cover = document.getElementById('cover');
             const content = document.getElementById('content');
             const openBtn = document.getElementById('openBtn');
+            const music = document.getElementById('bg-music');
             const body = document.body;
 
-            // Sembunyikan tombol setelah diklik
             openBtn.addEventListener('click', function () {
-                // Sembunyikan tombol
                 openBtn.style.display = 'none';
 
-                // Tampilkan konten dengan animasi
                 content.classList.remove('hidden');
                 content.classList.add('animate-slide-up');
 
-                // Aktifkan scroll
                 body.classList.remove('initial-state');
                 body.classList.add('scroll-enabled');
 
-                // Scroll halus ke konten setelah animasi
                 setTimeout(() => {
                     content.scrollIntoView({ behavior: 'smooth' });
                 }, 100);
+
+                music.play().catch(err => {
+                    console.log("Autoplay diblokir, user perlu klik:", err);
+                });
             });
         });
 
