--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Faisal dan Hanny | Undangan Pernikahan Berbasis Web" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Undangan ini untuk kamu, silakan klik link ini untuk membuka detail undangan. Faisal & Hanny" />
+    <meta property="og:image" content="components/Pengantin1w.jpg" />
     <title>Undangan Pernikahan</title>
     <script>
         tailwind.config = {
