--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="z-20 flex flex-col items-center justify-center min-h-screen">
             <h1 class="font-great-vibes text-5xl md:text-[70px] font-semibold text-rose-800">The Wedding</h1>
-            <img src="components/Pengantin-1-bwr.jpg" alt="" class="w-[200px] my-9 rounded-lg">
+            <img src="components/Pengantin1bwr.jpg" alt="" class="w-[200px] my-9 rounded-lg">
             <h2 class="font-great-vibes text-4xl font-semibold text-rose-800 mb-2">Faisal & Hanny</h2>
             <div class="flex items-center justify-center">
                 <div class="border-t-2 border-rose-800 w-32 mx-auto my-6"></div>
@@ -99,12 +99,12 @@
                             Wlingi, Kab. Blitar</p>
                         <br>
                     </div>
-                    <img src="components/Pengantin-1-bw.jpg" alt=""
+                    <img src="components/Pengantin1bw.jpg" alt=""
                         class="w-[300px] rounded-lg mx-auto md:ml-5 order-1 md:order-2">
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 mx-auto items-center gap-2">
                     <div class="flex justify-end">
-                        <img src="components/Pengantin-2-bw.jpg" alt=""
+                        <img src="components/Pengantin2bw.jpg" alt=""
                             class="w-[300px] rounded-lg mx-auto md:mr-5 order-1 md:order-2">
                     </div>
                     <div class="text-center flex flex-col items-center order-2 md:order-1">
@@ -170,12 +170,12 @@
         <div class="max-w-2xl bg-white rounded-lg shadow-md mx-10 md:mx-auto p-6 md:p-8 mb-8">
             <h2 class="font-great-vibes text-3xl text-center text-rose-600 mb-6">Galeri Kami</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-2">
-                <img class="w-[300px] object-fill bg-pink-100 rounded" src="components/Pengantin-1-w.jpg">
-                <img class="w-[300px] object-fill bg-pink-100 rounded" src="components/Pengantin-2-w.jpg">
-                <img class="w-[300px] object-fill bg-pink-100 rounded" src="components/Pengantin-3-w.jpg">
-                <img class="w-[300px] object-fill bg-pink-100 rounded" src="components/Pengantin-4-w.jpg">
-                <img class="w-[300px] object-fill bg-pink-100 rounded" src="components/Pengantin-5-w.jpg">
-                <img class="w-[300px] object-fill bg-pink-100 rounded" src="components/Pengantin-6-w.jpg">
+                <img class="w-[300px] object-fill bg-pink-100 rounded" src="components/Pengantin1w.jpg">
+                <img class="w-[300px] object-fill bg-pink-100 rounded" src="components/Pengantin2w.jpg">
+                <img class="w-[300px] object-fill bg-pink-100 rounded" src="components/Pengantin3w.jpg">
+                <img class="w-[300px] object-fill bg-pink-100 rounded" src="components/Pengantin4w.jpg">
+                <img class="w-[300px] object-fill bg-pink-100 rounded" src="components/Pengantin5w.jpg">
+                <img class="w-[300px] object-fill bg-pink-100 rounded" src="components/Pengantin6w.jpg">
             </div>
         </div>
         <!-- Hadiah -->
