--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Faisal dan Hanny | Undangan Pernikahan Berbasis Web" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Undangan ini untuk kamu, silakan klik link ini untuk membuka detail undangan. Faisal & Hanny" />
-    <meta property="og:image" content="components/Pengantin1w.jpg" />
+    <meta property="og:image" content="https://aizenss.github.io/UndanganNikah/components/Pengantin1w.jpg" />
     <title>Undangan Pernikahan</title>
     <script>
         tailwind.config = {
